--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -1,4 +1,4 @@
-<section class="section--products">
+<section class="section section--products">
   <div class="container">
     <h2 class="section__subheading">100% NATURAL</h2>
     <h1 class="section__heading">PRODUCTS</h1>
@@ -36,17 +36,29 @@
           Indulge in our rich and creamy ice cream, handcrafted with all-natural
           ingredients and available in a variety of flavors.
         </p>
-        <button class="button-read-more">
+        <button icecream-modal-open class="button-product-description">
           <img
             src="images/arrow-d.png"
             alt=""
-            class="button-read-more__arrow"
+            class="button-product-description__arrow"
           />
         </button>
-        <div class="products__overlay products__overlay--icecream">
+        <div
+          icecream-modal
+          class="products__overlay products__overlay--icecream products__overlay--is-hidden"
+        >
+          <button
+            icecream-modal-close
+            class="button-product-description-close button-product-description-close--icecream"
+          >
+            &times;
+          </button>
           <p class="products__text products__text--overlay">
-            Lorem ipsum is placeholder text commonly used in the graphic, print,
-            and publishing industries for previewing layouts and visual mockups.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <br /><br />
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
           </p>
         </div>
       </li>
@@ -78,17 +90,29 @@
           Indulge in our rich and creamy ice cream, handcrafted with all-natural
           ingredients and available in a variety of flavors.
         </p>
-        <button class="button-read-more">
+        <button icecoffee-modal-open class="button-product-description">
           <img
             src="images/arrow-d.png"
             alt=""
-            class="button-read-more__arrow"
+            class="button-product-description__arrow"
           />
         </button>
-        <div class="products__overlay products__overlay--icecoffee">
+        <div
+          icecoffee-modal
+          class="products__overlay products__overlay--icecoffee products__overlay--is-hidden"
+        >
+          <button
+            icecoffee-modal-close
+            class="button-product-description-close button-product-description-close--icecoffee"
+          >
+            &times;
+          </button>
           <p class="products__text products__text--overlay">
-            Lorem ipsum is placeholder text commonly used in the graphic, print,
-            and publishing industries for previewing layouts and visual mockups.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <br /><br />
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
           </p>
         </div>
       </li>
@@ -120,17 +144,29 @@
           Satisfy your sweet tooth with our thick, made with premium ice cream,
           topped with whipped cream and your favorite toppings.
         </p>
-        <button class="button-read-more">
+        <button milkshakes-modal-open class="button-product-description">
           <img
             src="images/arrow-d.png"
             alt=""
-            class="button-read-more__arrow"
+            class="button-product-description__arrow"
           />
         </button>
-        <div class="products__overlay products__overlay--milkshakes">
+        <div
+          milkshakes-modal
+          class="products__overlay products__overlay--milkshakes products__overlay--is-hidden"
+        >
+          <button
+            milkshakes-modal-close
+            class="button-product-description-close button-product-description-close--milkshakes"
+          >
+            &times;
+          </button>
           <p class="products__text products__text--overlay">
-            Lorem ipsum is placeholder text commonly used in the graphic, print,
-            and publishing industries for previewing layouts and visual mockups.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <br /><br />
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
           </p>
         </div>
       </li>
