--- a/src/sass/_contacts-section.scss
+++ b/src/sass/_contacts-section.scss
@@ -1,60 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap");
-
-/* Default styles*/
-
-html {
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-// body {
-//   background-color: #ffffff;
-//   color: var(--text-color-title);
-//   font-family: var(--font-family);
-//   letter-spacing: var(--letter-spacing);
-//   position: relative;
-// }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-ul {
-  list-style-type: none;
-  padding-inline-start: 0;
-  padding: 0;
-  margin: 0;
-}
-
-svg {
-  display: inline-block;
-}
-
-address {
-  font-style: normal;
-}
+// General styles
 
 $mobile-breakpoint: 480px;
 $tablet-breakpoint: 768px;
@@ -65,7 +9,7 @@ $desktop-breakpoint: 1200px;
   padding: 0 20px;
 }
 
-@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
+@media screen and (min-width: $tablet-breakpoint) {
   .container {
     padding: 0 16px;
   }
@@ -74,22 +18,15 @@ $desktop-breakpoint: 1200px;
 @media screen and (min-width: $desktop-breakpoint) {
   .container {
     margin: 0 auto;
-    padding: 0 16px;
     width: 1200px;
   }
-}
-
-// Products section
-
-.section--products {
-  background-color: #ffffff;
-  padding: 60px 0;
 }
 
 .section__subheading,
 .section__heading,
 .products__title {
-  font-family: "Titan One";
+  font-family: 'Titan One';
+  letter-spacing: 0.04em;
   line-height: 1.145;
   text-align: center;
   text-transform: capitalize;
@@ -109,225 +46,11 @@ $desktop-breakpoint: 1200px;
   }
 }
 
-@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
-  .section {
-    &--products {
-      padding-left: 16px;
-      padding-right: 16px;
-    }
-    &__subheading {
-      font-size: 26px;
-    }
-    &__heading {
-      font-size: 48px;
-      letter-spacing: 4%;
-    }
-  }
-}
-
-@media screen and (min-width: $desktop-breakpoint) {
-  .section {
-    &__subheading {
-      font-size: 34px;
-      letter-spacing: 4%;
-    }
-    &__heading {
-      font-size: 58px;
-      letter-spacing: 6%;
-    }
-  }
-}
-
-.products {
-  display: grid;
-  grid-row: 1 / 3;
-  width: 100%;
-  row-gap: 140px;
-  margin-top: 160px;
-}
-
-.products__item {
-  border-radius: 24px;
-  color: #ffffff;
-  letter-spacing: 4%;
-  padding: 160px 32px 40px 32px;
-  position: relative;
-  text-align: center;
-  width: 100%;
-
-  &--icecream {
-    background-color: #ffb8ca;
-  }
-
-  &--icecoffee {
-    background-color: #f0d1a5;
-  }
-
-  &--milkshakes {
-    background-color: #c2e297;
-  }
-}
-
-.products__title {
-  font-size: 20px;
-  line-height: 2.145;
-  position: relative;
-  &::after {
-    content: "";
-    width: 24.84px;
-    border-bottom: dotted 6px #fff;
-    position: absolute;
-    left: calc(50% - 12.42px);
-    top: 69px;
-  }
-}
-
-.products__text {
-  font-family: "DM Sans", sans-serif;
-  line-height: 1.76;
-  font-size: 14px;
-  font-weight: 700;
-  margin-top: 64px;
-}
-
-@media screen and (min-width: $tablet-breakpoint) {
-  .products {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
-  .products {
-    column-gap: 16px;
-    margin-top: 159px;
-    &__item {
-      padding: 118px 18px 40px 18px;
-    }
-    &__title {
-      font-size: 20px;
-    }
-    &__text {
-      font-size: 14px;
-    }
-  }
-}
-
-@media screen and (min-width: $desktop-breakpoint) {
-  .products {
-    column-gap: 32px;
-    margin-top: 281px;
-    &__item {
-      padding: 165px 32px 60px 32px;
-    }
-  }
-}
-
-.products__image {
-  border: none;
-  outline: none;
-  position: absolute;
-  transform: translateX(-50%);
-  left: 50%;
-  top: -32%;
-  z-index: 1;
-  height: 280px;
-  width: 280px;
-}
-
-@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
-  .products__image {
-    height: 224px;
-    width: 224px;
-    top: -30%;
-  }
-}
-
-@media screen and (min-width: $desktop-breakpoint) {
-  .products__image {
-    height: 394px;
-    width: 368px;
-    top: -55%;
-  }
-}
-
-.button-read-more {
-  background-color: #ffffff;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  height: 40px;
-  margin-top: 32px;
-  width: 40px;
-}
-
-.products__item {
-  position: relative;
-}
-
-.products__overlay {
-  border-radius: 24px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transition: all 350ms ease;
-
-  &--icecream {
-    transform: translateX(-100%);
-  }
-
-  &--icecoffee {
-    transform: translateY(100%);
-  }
-  &--milkshakes {
-    transform: translateX(100%);
-  }
-}
-
-.products__text--overlay {
-  padding: 80px 30px 0;
-  color: transparent;
-}
-
-.products__image {
-  transition: all 500ms ease;
-}
-
-.products__item:hover {
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-}
-
-.products__item:hover .products__overlay {
-  transform: translate(0, 0);
-  &--icecream {
-    background-color: rgb(209, 38, 61);
-  }
-  &--icecoffee {
-    background-color: rgb(169, 70, 24);
-  }
-  &--milkshakes {
-    background-color: rgb(83, 136, 83);
-  }
-}
-
-.products__item:hover .products__text--overlay {
-  color: #ffffff;
-}
-
-.products__item:hover .products__image {
-  top: 15%;
-  opacity: 0.2;
-  // top: -55%;
-}
-
-// CONTACTS
+// CONTACTS SECTION
 
 .section--contacts {
   padding: 40px 0;
-  background-image: linear-gradient(to bottom, #ffffff 50%, #fff5f6 50%);
+  background-image: linear-gradient(#ffffff 0 20%, #fff5f6 20% 100%);
 }
 .section__header--contacts {
   display: none;
@@ -351,23 +74,31 @@ $desktop-breakpoint: 1200px;
   background-color: #ffffff;
   border-radius: 24px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-  font-family: "DM Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-size: 12px;
   font-weight: 500;
   padding: 40px 32px;
 }
 
+@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
+  .locations__item {
+    font-size: 14px;
+  }
+}
+
 @media screen and (min-width: $desktop-breakpoint) {
   .locations__item {
+    font-size: 16px;
     padding: 40px 40px;
   }
 }
 
 .locations__type {
+  border-radius: 5px;
   color: #ffffff;
   display: inline-block;
   height: 16px;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.04em;
   line-height: 16px;
   padding: 0 20px;
   vertical-align: middle;
@@ -380,9 +111,17 @@ $desktop-breakpoint: 1200px;
   }
 }
 
+@media screen and (min-width: $tablet-breakpoint) {
+  .locations__type {
+    height: 28px;
+    line-height: 28px;
+  }
+}
+
 .locations__city,
 .locations__opening-days {
   color: #000000;
+  letter-spacing: 0.04em;
   line-height: 1.86;
 }
 
@@ -403,6 +142,7 @@ $desktop-breakpoint: 1200px;
   margin-top: 32px;
 }
 .locations__description {
+  letter-spacing: 0.04em;
   margin-top: 8px;
 }
 .locations__weekend-opening-hours {
@@ -425,7 +165,7 @@ $desktop-breakpoint: 1200px;
   border-radius: 26px;
   border: none;
   cursor: pointer;
-  font-family: "DM Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.3;
@@ -443,3 +183,23 @@ $desktop-breakpoint: 1200px;
   background-color: #ffffff;
   color: #d41443;
 }
+
+// REVIEWS
+
+// .section--reviews {
+//   padding: 60px;
+// }
+
+// @media screen and (min-width: $tablet-breakpoint) (max-width: $desktop-breakpoint) {
+//   .section--reviews {
+//     padding-left: 74px;
+//     padding-right: 74px;
+//   }
+// }
+
+// @media screen and (min-width: $desktop-breakpoint) {
+//   .section--reviews {
+//     padding-left: 116px;
+//     padding-right: 116px;
+//   }
+// }
