--- a/src/sass/_products-section.scss
+++ b/src/sass/_products-section.scss
@@ -1,14 +1,32 @@
-// Products section
+// General styles
 
-.section--products {
-  background-color: #ffffff;
-  padding: 60px 0;
+$mobile-breakpoint: 480px;
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1200px;
+
+.container {
+  width: 100%;
+  padding: 0 20px;
+}
+
+@media screen and (min-width: $tablet-breakpoint) {
+  .container {
+    padding: 0 16px;
+  }
+}
+
+@media screen and (min-width: $desktop-breakpoint) {
+  .container {
+    margin: 0 auto;
+    width: 1200px;
+  }
 }
 
 .section__subheading,
 .section__heading,
 .products__title {
   font-family: 'Titan One';
+  letter-spacing: 0.04em;
   line-height: 1.145;
   text-align: center;
   text-transform: capitalize;
@@ -57,11 +75,17 @@
   }
 }
 
+// Products section
+
+.section--products {
+  background-color: #ffffff;
+  padding: 60px 0;
+}
+
 .products {
-  display: flex;
-  flex: 1 0 auto;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-row: 1 / 3;
+  width: 100%;
   row-gap: 140px;
   margin-top: 160px;
 }
@@ -69,11 +93,16 @@
 .products__item {
   border-radius: 24px;
   color: #ffffff;
-  letter-spacing: 4%;
+  letter-spacing: 0.04em;
   padding: 160px 32px 40px 32px;
   position: relative;
   text-align: center;
   width: 100%;
+  &:hover {
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+  }
 
   &--icecream {
     background-color: #ffb8ca;
@@ -112,8 +141,7 @@
 
 @media screen and (min-width: $tablet-breakpoint) {
   .products {
-    flex-direction: row;
-    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
@@ -171,7 +199,7 @@
   }
 }
 
-.button-read-more {
+.button-product-description {
   background-color: #ffffff;
   border: none;
   border-radius: 50%;
@@ -181,10 +209,6 @@
   width: 40px;
 }
 
-.products__item {
-  position: relative;
-}
-
 .products__overlay {
   border-radius: 24px;
   position: absolute;
@@ -192,37 +216,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  transition: all 350ms ease;
+  // transition: all 500ms ease;
 
-  &--icecream {
-    transform: translateX(-100%);
-  }
-
-  &--icecoffee {
-    transform: translateY(100%);
-  }
-  &--milkshakes {
-    transform: translateX(100%);
-  }
-}
-
-.products__text--overlay {
-  padding: 80px 30px 0;
-  color: transparent;
-}
-
-.products__image {
-  transition: all 500ms ease;
-}
-
-.products__item:hover {
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-}
-
-.products__item:hover .products__overlay {
-  transform: translate(0, 0);
   &--icecream {
     background-color: rgb(209, 38, 61);
   }
@@ -232,14 +227,48 @@
   &--milkshakes {
     background-color: rgb(83, 136, 83);
   }
+  &--is-hidden {
+    visibility: hidden;
+  }
 }
 
-.products__item:hover .products__text--overlay {
+.products__text--overlay {
   color: #ffffff;
+  margin-top: 100px;
+  padding: 80px 30px 0;
 }
 
-.products__item:hover .products__image {
-  top: 15%;
-  opacity: 0.2;
-  // top: -55%;
+@media screen and (min-width: $tablet-breakpoint) and (max-width: $desktop-breakpoint) {
+  .products__text--overlay {
+    margin-top: 40px;
+  }
+}
+
+.button-product-description-close {
+  align-items: center;
+  background: #ffffff;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  font-size: 28px;
+  height: 40px;
+  justify-content: center;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40px;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
+  &--icecream {
+    color: #d41443;
+  }
+  &--icecoffee {
+    color: rgb(169, 70, 24);
+  }
+  &--milkshakes {
+    color: rgb(83, 136, 83);
+  }
 }
